well, started to get this working…

--- a/js/templates/Story/New.html
+++ b/js/templates/Story/New.html
@@ -7,11 +7,11 @@
 		<label id="lblDescription" for="areDescription">Description:</label>
 		<textarea id="areDescription"/>
 		
-		<a id="save" class="btn btn-primary">
+		<a id="saveStory" class="btn btn-primary">
 			<i class="icon-pencil icon-white"/>
 			save
 		</a>
-		<a id="cancel" class="btn">
+		<a id="cancelStory" class="btn">
 			cancel
 		</a>
 		
