--- a/js/templates/Page/New.html
+++ b/js/templates/Page/New.html
@@ -4,14 +4,14 @@
 		<label id="lblTitle" for="txtTitle">Title:</label>
 		<input type="text" id="txtTitle"/>
 	
-		<label id="lblDescription" for="areDescription">Body:</label>
-		<textarea id="areDescription"/>
+		<label id="lblBody" for="areDescription">Body:</label>
+		<textarea id="areBody"/>
 		
-		<a id="save" class="btn btn-primary">
+		<a id="savePage" class="btn btn-primary">
 			<i class="icon-pencil icon-white"/>
 			save
 		</a>
-		<a id="cancel" class="btn">
+		<a id="cancelPage" class="btn">
 			cancel
 		</a>
 		
