--- a/js/templates/Page/Item.html
+++ b/js/templates/Page/Item.html
@@ -7,7 +7,7 @@
 <ul>
 <% _.each(exits, function(exit){ %>
 	<li>
-		<a class="path" data-id="<%= exit.get("id") %>">
+		<a class="path" data-id="<%= exit.get("output") %>">
 			<%= exit.get("body")%>
 		</a>
 	</li>
